styles.css
@import url("./general/colors.css");
@import url("./general/globalvariables.css");

* { margin: 0; padding: 0; box-sizing: border-box; }

html {
  font-size: 62.5%;
}

body {
  width: 100vw; height: fit-content;
  padding-left: 1.2rem;
  max-width: 100vw; min-height: 100vh;
  font-size: 1.6rem;
}

#app {
  width: 100%;
  min-height: 100vh;
}

.navigation {
  position: fixed;
  left: -21.8rem;
  z-index: 5;
  width: 22rem;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition: .5s;
}

.navigation .nav-pool {
  width: 1.2rem;
  height: 100%;
  position: absolute;
  right: -1rem;
  top: 0;
}

.navigation .nav-pool svg {
  position: absolute;
  z-index: 5;
  left: -.66rem;
  top: calc(50% - 2.4rem);
}

.navigation input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: inherit;
  outline: none;
  cursor: pointer;
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 6;
}

.main-nav {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: inherit;
  overflow: auto;
  scrollbar-width: thin;
  scrollbar-color: #888 transparent;
}

.main-nav a {
  text-decoration: none;
  width: 100%;
  padding: .5rem 0;
  text-align: center;
}

.main-nav a:hover {
  background-color: var(--app_nav_hover_color);
}

.wrapper {
  flex-grow: 1;
  width: 100%;
}

.top { min-height: 3rem; }; .bottom { min-height: 4rem; }

.navigation:has(.nav-pool input:checked) {
  left: 0;
}

.nav-input:checked ~ .nav-arrow {
  transform: rotate(180deg);
}

.selected-nav-bg {
  background-color: var(--selected_nav_bg);
}

